Update with new script to get sequence timing

--- a/hd_hammer/Makefile
+++ b/hd_hammer/Makefile
@@ -1,4 +1,4 @@
-all: time
+all: time time_set_sequence
 
 clean:
 	rm time
@@ -7,4 +7,7 @@ CFLAGS= -Wall -O3 -march=native -pthread -lphidget22
 
 time : time.c config.h
 	gcc -o time time.c $(CFLAGS) 
+
+time_set_sequence : time_set_sequence.c config.h
+	gcc -o time_set_sequence time_set_sequence.c $(CFLAGS) 
 
