Add max_seek_sequence algorithm

--- a/hd_hammer/Makefile
+++ b/hd_hammer/Makefile
@@ -1,6 +1,6 @@
 CFLAGS= -Wall -O3 -march=native -pthread -lphidget22
 
-all: bin/time_standard bin/time_alternating bin/accel
+all: bin/time_standard bin/time_alternating bin/accel bin/time_max_seek
 
 
 bin/accel: accel.c
@@ -13,6 +13,12 @@ bin/time.o: time.c
 	@mkdir -p bin
 	gcc -c time.c $(CFLAGS) 
 	@mv time.o bin/
+
+bin/max_seek_sequence.o : sequence_algorithm.h max_seek_sequence.c
+	@printf "Building max_seek_sequence.o\n"
+	@mkdir -p bin
+	gcc -c max_seek_sequence.c $(CFLAGS)
+	@mv max_seek_sequence.o bin/
 
 bin/random_sequence.o : sequence_algorithm.h random_sequence.c
 	@printf "Building random_sequence.o\n"
@@ -36,4 +42,7 @@ bin/time_alternating : config.h bin/alternating_sequence.o bin/time.o
 	@mkdir -p bin
 	gcc -o bin/time_alternating bin/time.o bin/alternating_sequence.o $(CFLAGS) 
 
-
+bin/time_max_seek : config.h bin/max_seek_sequence.o bin/time.o
+	@printf "Building time_max_seek\n"
+	@mkdir -p bin
+	gcc -o bin/time_max_seek bin/time.o bin/max_seek_sequence.o $(CFLAGS) 
